JastAddExtensions/Refactoring/tests/eclipse/IntroduceParameter/invalid/PartString.java
//selection: 6, 23, 6, 30
package invalid;

class PartString {
	void bar() {
		System.out.println("Charlie Chaplin");
	}
	void use() {
		bar();
	}
}
